<resources>
    <string name="app_name">Моя дача</string>
    <string name="bt_wc_on_name">ВКЛЮЧИТЬ</string>
    <string name="bt_wc_off_name">ВЫКЛЮЧИТЬ</string>
    <string name="iv_wc_lamp_name">TODO</string>


    <string name="action_settings">Настройки</string>
    <string name="action_item3">item3</string>

    <string name="wifi_net">Имя сети</string>
    <string name="user_name">Пользователь</string>
    <string name="password">Пароль</string>
    <string name="password_mqtt">Пароль MQTT</string>
    <string name="bt_save">Сохранить</string>
    <string name="ip_name">IP адрес</string>
    <string name="ip_name_mqtt">IP адрес MQTT</string>
    <string name="bt_cancel">Отмена</string>
    <string name="lamp_blank_fragment">Включение лампа</string>
    <string name="connectWiFi">Подключение к WiFi</string>
    <string name="on_lamp">Включение лампы</string>
    <string name="bt_connect_name">Поиск доступных сетей</string>
    <string name="sv_fg_connect">Доступные сети</string>
    <string name="tv_fg_connect">Описание сети</string>
    <string name="object_control">Объекты управления</string>
    <string name="not_text">Нет текста</string>
    <string name="my_ok">OK</string>
    <string name="nameProject">Имя проекта</string>
    <string name="home_page">Главная страница</string>
    <string name="object_control_add">Добавить объект</string>

    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="picture_id">Картинка</string>

    <string name="ask_a_question">Вы хотите изменить или удалить выбранные объекты</string>
    <string name="ask_a_question_users">Вы хотите изменить или удалить выбранных пользователей</string>
    <string name="update">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="question">Вопрос</string>
    <string name="object_control_update">Изменить объект</string>
    <string name="picture_url">Адрес картинки</string>
    <string name="id">id</string>
    <string name="id_number">Номер</string>
    <string name="title_activity_add_object_control">AddObjectControlActivity</string>
    <string name="icon">Icon</string>
    <string name="main_page">Главная страница</string>
    <string name="setting_page">Настройки</string>
    <string name="action_close">Выход</string>
    <string name="connectWiFi_page">Подключение к сети</string>
    <string name="title_activity_control_point">ControlPointActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_login">Авторизация</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_registration">Регистрация</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Такого пользователя нет. Зарегистрируйтесь.</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Ошибка входа"</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_point">Элементы</string>
    <string name="not_name">"Не заполнено поле наименование"</string>
    <string name="not_name_user">"Не заполнено поле имя"</string>
    <string name="not_user">"Не заполнено поле пользователь"</string>
    <string name="not_password">"Не заполнено поле пароль"</string>
    <string name="not_type_point">"Не заполнено поле тип элемента"</string>
    <string name="type_point">"Тип элемента"</string>
    <string name="executable_code">"Выпоняемый код"</string>
    <string name="list_control_point_page">Список элементов</string>
    <string name="list_users_page">Список пользователей</string>
    <string name="lamp">Лампочка</string>
    <string name="two_lamp">Две лампочки</string>
    <string name="socket">Розетка</string>
    <string name="thermometer">Термометр</string>
    <string name="barometer">Барометр</string>
    <string name="tv">Телевизор</string>
    <string name="conditioner">Кондиционер</string>
    <string name="gas_sensor">Датчик газа</string>
    <string name="not_picture">Нет картинкки</string>
    <string name="add_point">Дабавить элемент</string>
    <string name="topic">Topic</string>
    <string name="port">Порт</string>
    <string name="weather">Погода</string>
    <string name="kode_city">Код города</string>
    <string name="city">Днепр</string>
    <string name="basicTopic">Базовый topic</string>
    <string name="button_users">Пользователи</string>
    <string name="user_name_name">Имя</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>