<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/connect"
        android:orderInCategory="100"
        android:title="@string/connectWiFi"
        app:showAsAction="never" />
    <item
        android:id="@+id/myObjet"
        android:orderInCategory="100"
        android:title="@string/object_control"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/control_point"
        android:orderInCategory="100"
        android:title="@string/action_point"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/action_close"
        app:showAsAction="never" />

</menu>
