<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myActivity.SettingActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView_object"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:background="#F1F3E7"
        android:gravity="center"
        android:text="@string/not_text"
        android:textColor="#0C0C0C"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textAllCaps="false"
        tools:ignore="TextViewEdits" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView_object"
        tools:layout_editor_absoluteX="0dp">


        <TextView
            android:id="@+id/viewTex_wifi_net"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/wifi_net"
            android:textColorHighlight="#090909" />

        <EditText
            android:id="@+id/editText_wifi_net"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/wifi_net"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editUserName"
            android:layout_marginTop="3dp">

            <EditText
                android:id="@+id/editUserName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textColorHint="#546E7A"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textIP"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/ip_name" />

        <EditText
            android:id="@+id/editTexIP"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ip_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/text_input_password"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="#546E7A"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <CheckBox
            android:id="@+id/onpass"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:accessibilityLiveRegion="polite"
            android:button="@mipmap/icons8_not_show_48_1_foreground"
            android:checked="false"
            android:gravity="center_vertical"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />


</androidx.constraintlayout.widget.ConstraintLayout>